Project4/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    WHITESPACE
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> expr ;
Rule 5     statement -> declaration ;
Rule 6     statement -> block
Rule 7     statement -> if_block
Rule 8     statement -> while_loop
Rule 9     statement -> break ;
Rule 10    statement -> ;
Rule 11    block -> OPEN_BLOCK statements CLOSE_BLOCK
Rule 12    if_block -> COMMAND_IF ( expr ) statement
Rule 13    if_block -> COMMAND_IF ( expr ) statement COMMAND_ELSE statement
Rule 14    break -> COMMAND_BREAK
Rule 15    while_loop -> COMMAND_WHILE ( expr ) statement
Rule 16    declaration -> TYPE ID
Rule 17    declaration -> TYPE ID = expr
Rule 18    expr -> expr + expr
Rule 19    expr -> expr - expr
Rule 20    expr -> expr * expr
Rule 21    expr -> expr / expr
Rule 22    expr -> expr ASSIGN_ADD expr
Rule 23    expr -> expr ASSIGN_SUB expr
Rule 24    expr -> expr ASSIGN_MULT expr
Rule 25    expr -> expr ASSIGN_DIV expr
Rule 26    expr -> ( expr )
Rule 27    expr -> expr COMP_EQU expr
Rule 28    expr -> expr COMP_NEQU expr
Rule 29    expr -> expr < expr
Rule 30    expr -> expr COMP_LTE expr
Rule 31    expr -> expr > expr
Rule 32    expr -> expr COMP_GTE expr
Rule 33    expr -> expr BOOL_AND expr
Rule 34    expr -> expr BOOL_OR expr
Rule 35    expr -> ! expr
Rule 36    expr -> COMMAND_PRINT ( arguments )
Rule 37    arguments -> expr
Rule 38    arguments -> arguments , expr
Rule 39    expr -> COMMAND_RANDOM ( expr )
Rule 40    expr -> VAL_LITERAL
Rule 41    expr -> - VAL_LITERAL
Rule 42    expr -> CHAR_LITERAL
Rule 43    expr -> variable
Rule 44    expr -> - variable
Rule 45    expr -> variable = expr
Rule 46    variable -> ID

Terminals, with rules where they appear

!                    : 35
(                    : 12 13 15 26 36 39
)                    : 12 13 15 26 36 39
*                    : 20
+                    : 18
,                    : 38
-                    : 19 41 44
/                    : 21
;                    : 4 5 9 10
<                    : 29
=                    : 17 45
>                    : 31
ASSIGN_ADD           : 22
ASSIGN_DIV           : 25
ASSIGN_MULT          : 24
ASSIGN_SUB           : 23
BOOL_AND             : 33
BOOL_OR              : 34
CHAR_LITERAL         : 42
CLOSE_BLOCK          : 11
COMMAND_BREAK        : 14
COMMAND_ELSE         : 13
COMMAND_IF           : 12 13
COMMAND_PRINT        : 36
COMMAND_RANDOM       : 39
COMMAND_WHILE        : 15
COMMENT              : 
COMP_EQU             : 27
COMP_GTE             : 32
COMP_LTE             : 30
COMP_NEQU            : 28
ID                   : 16 17 46
OPEN_BLOCK           : 11
TYPE                 : 16 17
VAL_LITERAL          : 40 41
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

arguments            : 36 38
block                : 6
break                : 9
declaration          : 5
expr                 : 4 12 13 15 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 37 38 39 45
if_block             : 7
program              : 0
statement            : 2 12 13 13 15
statements           : 1 2 11
variable             : 43 44 45
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    ;               reduce using rule 3 (statements -> .)
    (               reduce using rule 3 (statements -> .)
    !               reduce using rule 3 (statements -> .)
    COMMAND_PRINT   reduce using rule 3 (statements -> .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> .)
    VAL_LITERAL     reduce using rule 3 (statements -> .)
    -               reduce using rule 3 (statements -> .)
    CHAR_LITERAL    reduce using rule 3 (statements -> .)
    TYPE            reduce using rule 3 (statements -> .)
    OPEN_BLOCK      reduce using rule 3 (statements -> .)
    COMMAND_IF      reduce using rule 3 (statements -> .)
    COMMAND_WHILE   reduce using rule 3 (statements -> .)
    COMMAND_BREAK   reduce using rule 3 (statements -> .)
    ID              reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    statements                     shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . expr ;
    (5) statement -> . declaration ;
    (6) statement -> . block
    (7) statement -> . if_block
    (8) statement -> . while_loop
    (9) statement -> . break ;
    (10) statement -> . ;
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (16) declaration -> . TYPE ID
    (17) declaration -> . TYPE ID = expr
    (11) block -> . OPEN_BLOCK statements CLOSE_BLOCK
    (12) if_block -> . COMMAND_IF ( expr ) statement
    (13) if_block -> . COMMAND_IF ( expr ) statement COMMAND_ELSE statement
    (15) while_loop -> . COMMAND_WHILE ( expr ) statement
    (14) break -> . COMMAND_BREAK
    (46) variable -> . ID

    $end            reduce using rule 1 (program -> statements .)
    ;               shift and go to state 7
    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    TYPE            shift and go to state 5
    OPEN_BLOCK      shift and go to state 15
    COMMAND_IF      shift and go to state 12
    COMMAND_WHILE   shift and go to state 22
    COMMAND_BREAK   shift and go to state 3
    ID              shift and go to state 6

    break                          shift and go to state 9
    block                          shift and go to state 4
    while_loop                     shift and go to state 23
    declaration                    shift and go to state 18
    if_block                       shift and go to state 13
    variable                       shift and go to state 11
    expr                           shift and go to state 8
    statement                      shift and go to state 16

state 2

    (0) S' -> program .



state 3

    (14) break -> COMMAND_BREAK .

    ;               reduce using rule 14 (break -> COMMAND_BREAK .)


state 4

    (6) statement -> block .

    COMMAND_ELSE    reduce using rule 6 (statement -> block .)
    ;               reduce using rule 6 (statement -> block .)
    (               reduce using rule 6 (statement -> block .)
    !               reduce using rule 6 (statement -> block .)
    COMMAND_PRINT   reduce using rule 6 (statement -> block .)
    COMMAND_RANDOM  reduce using rule 6 (statement -> block .)
    VAL_LITERAL     reduce using rule 6 (statement -> block .)
    -               reduce using rule 6 (statement -> block .)
    CHAR_LITERAL    reduce using rule 6 (statement -> block .)
    TYPE            reduce using rule 6 (statement -> block .)
    OPEN_BLOCK      reduce using rule 6 (statement -> block .)
    COMMAND_IF      reduce using rule 6 (statement -> block .)
    COMMAND_WHILE   reduce using rule 6 (statement -> block .)
    COMMAND_BREAK   reduce using rule 6 (statement -> block .)
    ID              reduce using rule 6 (statement -> block .)
    $end            reduce using rule 6 (statement -> block .)
    CLOSE_BLOCK     reduce using rule 6 (statement -> block .)


state 5

    (16) declaration -> TYPE . ID
    (17) declaration -> TYPE . ID = expr

    ID              shift and go to state 25


state 6

    (46) variable -> ID .

    =               reduce using rule 46 (variable -> ID .)
    +               reduce using rule 46 (variable -> ID .)
    -               reduce using rule 46 (variable -> ID .)
    *               reduce using rule 46 (variable -> ID .)
    /               reduce using rule 46 (variable -> ID .)
    ASSIGN_ADD      reduce using rule 46 (variable -> ID .)
    ASSIGN_SUB      reduce using rule 46 (variable -> ID .)
    ASSIGN_MULT     reduce using rule 46 (variable -> ID .)
    ASSIGN_DIV      reduce using rule 46 (variable -> ID .)
    COMP_EQU        reduce using rule 46 (variable -> ID .)
    COMP_NEQU       reduce using rule 46 (variable -> ID .)
    <               reduce using rule 46 (variable -> ID .)
    COMP_LTE        reduce using rule 46 (variable -> ID .)
    >               reduce using rule 46 (variable -> ID .)
    COMP_GTE        reduce using rule 46 (variable -> ID .)
    BOOL_AND        reduce using rule 46 (variable -> ID .)
    BOOL_OR         reduce using rule 46 (variable -> ID .)
    ;               reduce using rule 46 (variable -> ID .)
    )               reduce using rule 46 (variable -> ID .)
    ,               reduce using rule 46 (variable -> ID .)


state 7

    (10) statement -> ; .

    COMMAND_ELSE    reduce using rule 10 (statement -> ; .)
    ;               reduce using rule 10 (statement -> ; .)
    (               reduce using rule 10 (statement -> ; .)
    !               reduce using rule 10 (statement -> ; .)
    COMMAND_PRINT   reduce using rule 10 (statement -> ; .)
    COMMAND_RANDOM  reduce using rule 10 (statement -> ; .)
    VAL_LITERAL     reduce using rule 10 (statement -> ; .)
    -               reduce using rule 10 (statement -> ; .)
    CHAR_LITERAL    reduce using rule 10 (statement -> ; .)
    TYPE            reduce using rule 10 (statement -> ; .)
    OPEN_BLOCK      reduce using rule 10 (statement -> ; .)
    COMMAND_IF      reduce using rule 10 (statement -> ; .)
    COMMAND_WHILE   reduce using rule 10 (statement -> ; .)
    COMMAND_BREAK   reduce using rule 10 (statement -> ; .)
    ID              reduce using rule 10 (statement -> ; .)
    $end            reduce using rule 10 (statement -> ; .)
    CLOSE_BLOCK     reduce using rule 10 (statement -> ; .)


state 8

    (4) statement -> expr . ;
    (18) expr -> expr . + expr
    (19) expr -> expr . - expr
    (20) expr -> expr . * expr
    (21) expr -> expr . / expr
    (22) expr -> expr . ASSIGN_ADD expr
    (23) expr -> expr . ASSIGN_SUB expr
    (24) expr -> expr . ASSIGN_MULT expr
    (25) expr -> expr . ASSIGN_DIV expr
    (27) expr -> expr . COMP_EQU expr
    (28) expr -> expr . COMP_NEQU expr
    (29) expr -> expr . < expr
    (30) expr -> expr . COMP_LTE expr
    (31) expr -> expr . > expr
    (32) expr -> expr . COMP_GTE expr
    (33) expr -> expr . BOOL_AND expr
    (34) expr -> expr . BOOL_OR expr

    ;               shift and go to state 31
    +               shift and go to state 36
    -               shift and go to state 33
    *               shift and go to state 27
    /               shift and go to state 28
    ASSIGN_ADD      shift and go to state 40
    ASSIGN_SUB      shift and go to state 39
    ASSIGN_MULT     shift and go to state 37
    ASSIGN_DIV      shift and go to state 26
    COMP_EQU        shift and go to state 42
    COMP_NEQU       shift and go to state 41
    <               shift and go to state 34
    COMP_LTE        shift and go to state 35
    >               shift and go to state 38
    COMP_GTE        shift and go to state 30
    BOOL_AND        shift and go to state 29
    BOOL_OR         shift and go to state 32


state 9

    (9) statement -> break . ;

    ;               shift and go to state 43


state 10

    (36) expr -> COMMAND_PRINT . ( arguments )

    (               shift and go to state 44


state 11

    (43) expr -> variable .
    (45) expr -> variable . = expr

    +               reduce using rule 43 (expr -> variable .)
    -               reduce using rule 43 (expr -> variable .)
    *               reduce using rule 43 (expr -> variable .)
    /               reduce using rule 43 (expr -> variable .)
    ASSIGN_ADD      reduce using rule 43 (expr -> variable .)
    ASSIGN_SUB      reduce using rule 43 (expr -> variable .)
    ASSIGN_MULT     reduce using rule 43 (expr -> variable .)
    ASSIGN_DIV      reduce using rule 43 (expr -> variable .)
    COMP_EQU        reduce using rule 43 (expr -> variable .)
    COMP_NEQU       reduce using rule 43 (expr -> variable .)
    <               reduce using rule 43 (expr -> variable .)
    COMP_LTE        reduce using rule 43 (expr -> variable .)
    >               reduce using rule 43 (expr -> variable .)
    COMP_GTE        reduce using rule 43 (expr -> variable .)
    BOOL_AND        reduce using rule 43 (expr -> variable .)
    BOOL_OR         reduce using rule 43 (expr -> variable .)
    ;               reduce using rule 43 (expr -> variable .)
    )               reduce using rule 43 (expr -> variable .)
    ,               reduce using rule 43 (expr -> variable .)
    =               shift and go to state 45


state 12

    (12) if_block -> COMMAND_IF . ( expr ) statement
    (13) if_block -> COMMAND_IF . ( expr ) statement COMMAND_ELSE statement

    (               shift and go to state 46


state 13

    (7) statement -> if_block .

    COMMAND_ELSE    reduce using rule 7 (statement -> if_block .)
    ;               reduce using rule 7 (statement -> if_block .)
    (               reduce using rule 7 (statement -> if_block .)
    !               reduce using rule 7 (statement -> if_block .)
    COMMAND_PRINT   reduce using rule 7 (statement -> if_block .)
    COMMAND_RANDOM  reduce using rule 7 (statement -> if_block .)
    VAL_LITERAL     reduce using rule 7 (statement -> if_block .)
    -               reduce using rule 7 (statement -> if_block .)
    CHAR_LITERAL    reduce using rule 7 (statement -> if_block .)
    TYPE            reduce using rule 7 (statement -> if_block .)
    OPEN_BLOCK      reduce using rule 7 (statement -> if_block .)
    COMMAND_IF      reduce using rule 7 (statement -> if_block .)
    COMMAND_WHILE   reduce using rule 7 (statement -> if_block .)
    COMMAND_BREAK   reduce using rule 7 (statement -> if_block .)
    ID              reduce using rule 7 (statement -> if_block .)
    $end            reduce using rule 7 (statement -> if_block .)
    CLOSE_BLOCK     reduce using rule 7 (statement -> if_block .)


state 14

    (41) expr -> - . VAL_LITERAL
    (44) expr -> - . variable
    (46) variable -> . ID

    VAL_LITERAL     shift and go to state 48
    ID              shift and go to state 6

    variable                       shift and go to state 47

state 15

    (11) block -> OPEN_BLOCK . statements CLOSE_BLOCK
    (2) statements -> . statements statement
    (3) statements -> .

    CLOSE_BLOCK     reduce using rule 3 (statements -> .)
    ;               reduce using rule 3 (statements -> .)
    (               reduce using rule 3 (statements -> .)
    !               reduce using rule 3 (statements -> .)
    COMMAND_PRINT   reduce using rule 3 (statements -> .)
    COMMAND_RANDOM  reduce using rule 3 (statements -> .)
    VAL_LITERAL     reduce using rule 3 (statements -> .)
    -               reduce using rule 3 (statements -> .)
    CHAR_LITERAL    reduce using rule 3 (statements -> .)
    TYPE            reduce using rule 3 (statements -> .)
    OPEN_BLOCK      reduce using rule 3 (statements -> .)
    COMMAND_IF      reduce using rule 3 (statements -> .)
    COMMAND_WHILE   reduce using rule 3 (statements -> .)
    COMMAND_BREAK   reduce using rule 3 (statements -> .)
    ID              reduce using rule 3 (statements -> .)

    statements                     shift and go to state 49

state 16

    (2) statements -> statements statement .

    ;               reduce using rule 2 (statements -> statements statement .)
    (               reduce using rule 2 (statements -> statements statement .)
    !               reduce using rule 2 (statements -> statements statement .)
    COMMAND_PRINT   reduce using rule 2 (statements -> statements statement .)
    COMMAND_RANDOM  reduce using rule 2 (statements -> statements statement .)
    VAL_LITERAL     reduce using rule 2 (statements -> statements statement .)
    -               reduce using rule 2 (statements -> statements statement .)
    CHAR_LITERAL    reduce using rule 2 (statements -> statements statement .)
    TYPE            reduce using rule 2 (statements -> statements statement .)
    OPEN_BLOCK      reduce using rule 2 (statements -> statements statement .)
    COMMAND_IF      reduce using rule 2 (statements -> statements statement .)
    COMMAND_WHILE   reduce using rule 2 (statements -> statements statement .)
    COMMAND_BREAK   reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    CLOSE_BLOCK     reduce using rule 2 (statements -> statements statement .)


state 17

    (39) expr -> COMMAND_RANDOM . ( expr )

    (               shift and go to state 50


state 18

    (5) statement -> declaration . ;

    ;               shift and go to state 51


state 19

    (35) expr -> ! . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 52

state 20

    (26) expr -> ( . expr )
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 53

state 21

    (40) expr -> VAL_LITERAL .

    +               reduce using rule 40 (expr -> VAL_LITERAL .)
    -               reduce using rule 40 (expr -> VAL_LITERAL .)
    *               reduce using rule 40 (expr -> VAL_LITERAL .)
    /               reduce using rule 40 (expr -> VAL_LITERAL .)
    ASSIGN_ADD      reduce using rule 40 (expr -> VAL_LITERAL .)
    ASSIGN_SUB      reduce using rule 40 (expr -> VAL_LITERAL .)
    ASSIGN_MULT     reduce using rule 40 (expr -> VAL_LITERAL .)
    ASSIGN_DIV      reduce using rule 40 (expr -> VAL_LITERAL .)
    COMP_EQU        reduce using rule 40 (expr -> VAL_LITERAL .)
    COMP_NEQU       reduce using rule 40 (expr -> VAL_LITERAL .)
    <               reduce using rule 40 (expr -> VAL_LITERAL .)
    COMP_LTE        reduce using rule 40 (expr -> VAL_LITERAL .)
    >               reduce using rule 40 (expr -> VAL_LITERAL .)
    COMP_GTE        reduce using rule 40 (expr -> VAL_LITERAL .)
    BOOL_AND        reduce using rule 40 (expr -> VAL_LITERAL .)
    BOOL_OR         reduce using rule 40 (expr -> VAL_LITERAL .)
    ;               reduce using rule 40 (expr -> VAL_LITERAL .)
    )               reduce using rule 40 (expr -> VAL_LITERAL .)
    ,               reduce using rule 40 (expr -> VAL_LITERAL .)


state 22

    (15) while_loop -> COMMAND_WHILE . ( expr ) statement

    (               shift and go to state 54


state 23

    (8) statement -> while_loop .

    COMMAND_ELSE    reduce using rule 8 (statement -> while_loop .)
    ;               reduce using rule 8 (statement -> while_loop .)
    (               reduce using rule 8 (statement -> while_loop .)
    !               reduce using rule 8 (statement -> while_loop .)
    COMMAND_PRINT   reduce using rule 8 (statement -> while_loop .)
    COMMAND_RANDOM  reduce using rule 8 (statement -> while_loop .)
    VAL_LITERAL     reduce using rule 8 (statement -> while_loop .)
    -               reduce using rule 8 (statement -> while_loop .)
    CHAR_LITERAL    reduce using rule 8 (statement -> while_loop .)
    TYPE            reduce using rule 8 (statement -> while_loop .)
    OPEN_BLOCK      reduce using rule 8 (statement -> while_loop .)
    COMMAND_IF      reduce using rule 8 (statement -> while_loop .)
    COMMAND_WHILE   reduce using rule 8 (statement -> while_loop .)
    COMMAND_BREAK   reduce using rule 8 (statement -> while_loop .)
    ID              reduce using rule 8 (statement -> while_loop .)
    $end            reduce using rule 8 (statement -> while_loop .)
    CLOSE_BLOCK     reduce using rule 8 (statement -> while_loop .)


state 24

    (42) expr -> CHAR_LITERAL .

    +               reduce using rule 42 (expr -> CHAR_LITERAL .)
    -               reduce using rule 42 (expr -> CHAR_LITERAL .)
    *               reduce using rule 42 (expr -> CHAR_LITERAL .)
    /               reduce using rule 42 (expr -> CHAR_LITERAL .)
    ASSIGN_ADD      reduce using rule 42 (expr -> CHAR_LITERAL .)
    ASSIGN_SUB      reduce using rule 42 (expr -> CHAR_LITERAL .)
    ASSIGN_MULT     reduce using rule 42 (expr -> CHAR_LITERAL .)
    ASSIGN_DIV      reduce using rule 42 (expr -> CHAR_LITERAL .)
    COMP_EQU        reduce using rule 42 (expr -> CHAR_LITERAL .)
    COMP_NEQU       reduce using rule 42 (expr -> CHAR_LITERAL .)
    <               reduce using rule 42 (expr -> CHAR_LITERAL .)
    COMP_LTE        reduce using rule 42 (expr -> CHAR_LITERAL .)
    >               reduce using rule 42 (expr -> CHAR_LITERAL .)
    COMP_GTE        reduce using rule 42 (expr -> CHAR_LITERAL .)
    BOOL_AND        reduce using rule 42 (expr -> CHAR_LITERAL .)
    BOOL_OR         reduce using rule 42 (expr -> CHAR_LITERAL .)
    ;               reduce using rule 42 (expr -> CHAR_LITERAL .)
    )               reduce using rule 42 (expr -> CHAR_LITERAL .)
    ,               reduce using rule 42 (expr -> CHAR_LITERAL .)


state 25

    (16) declaration -> TYPE ID .
    (17) declaration -> TYPE ID . = expr

    ;               reduce using rule 16 (declaration -> TYPE ID .)
    =               shift and go to state 55


state 26

    (25) expr -> expr ASSIGN_DIV . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 56

state 27

    (20) expr -> expr * . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 57

state 28

    (21) expr -> expr / . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 58

state 29

    (33) expr -> expr BOOL_AND . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID

    (               shift and go to state 20
    !               shift and go to state 19
    COMMAND_PRINT   shift and go to state 10
    COMMAND_RANDOM  shift and go to state 17
    VAL_LITERAL     shift and go to state 21
    -               shift and go to state 14
    CHAR_LITERAL    shift and go to state 24
    ID              shift and go to state 6

    variable                       shift and go to state 11
    expr                           shift and go to state 59

state 30

    (32) expr -> expr COMP_GTE . expr
    (18) expr -> . expr + expr
    (19) expr -> . expr - expr
    (20) expr -> . expr * expr
    (21) expr -> . expr / expr
    (22) expr -> . expr ASSIGN_ADD expr
    (23) expr -> . expr ASSIGN_SUB expr
    (24) expr -> . expr ASSIGN_MULT expr
    (25) expr -> . expr ASSIGN_DIV expr
    (26) expr -> . ( expr )
    (27) expr -> . expr COMP_EQU expr
    (28) expr -> . expr COMP_NEQU expr
    (29) expr -> . expr < expr
    (30) expr -> . expr COMP_LTE expr
    (31) expr -> . expr > expr
    (32) expr -> . expr COMP_GTE expr
    (33) expr -> . expr BOOL_AND expr
    (34) expr -> . expr BOOL_OR expr
    (35) expr -> . ! expr
    (36) expr -> . COMMAND_PRINT ( arguments )
    (39) expr -> . COMMAND_RANDOM ( expr )
    (40) expr -> . VAL_LITERAL
    (41) expr -> . - VAL_LITERAL
    (42) expr -> . CHAR_LITERAL
    (43) expr -> . variable
    (44) expr -> . - variable
    (45) expr -> . variable = expr
    (46) variable -> . ID
